--- a/HyuJokbo/HyuJokbo/GoohaeTabStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/GoohaeTabStoryboard.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -64,9 +65,12 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" highlighted="YES" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="COg-G4-TSa">
+                                        <button opaque="NO" contentMode="scaleToFill" highlighted="YES" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="COg-G4-TSa">
                                             <rect key="frame" x="279" y="16" width="28" height="25"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="28" id="ila-qX-D7S"/>
+                                                <constraint firstAttribute="height" constant="25" id="pya-xS-jfj"/>
+                                            </constraints>
                                             <state key="normal" image="icon-download">
                                                 <color key="titleShadowColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
@@ -83,6 +87,10 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="COg-G4-TSa" firstAttribute="centerY" secondItem="hKb-Vm-QG9" secondAttribute="centerY" id="nsj-kD-51x"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="COg-G4-TSa" secondAttribute="trailing" constant="5" id="ykC-l1-30g"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="DownloadButtonImage" destination="COg-G4-TSa" id="Nz3-MM-Y0o"/>
