--- a/HyuJokbo/HyuJokbo/GoohaeTabUploadStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/GoohaeTabUploadStoryboard.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="eMS-b7-7eQ">
             <objects>
                 <navigationController id="O8c-PV-s2D" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="Ch0-co-9Vc">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Ch0-co-9Vc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -75,9 +75,12 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="icon-photo-camera"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dz-w5-Kws" customClass="DLRadioButton">
-                                        <rect key="frame" x="236" y="15" width="76" height="34"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dz-w5-Kws" customClass="DLRadioButton">
+                                        <rect key="frame" x="291" y="15" width="76" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="PPv-SY-TO2"/>
+                                            <constraint firstAttribute="width" constant="76" id="x0Y-UU-w9V"/>
+                                        </constraints>
                                         <state key="normal" title="익명">
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -106,7 +109,10 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="2dz-w5-Kws" firstAttribute="top" secondItem="aAe-Il-pgB" secondAttribute="top" constant="15" id="0Bi-6z-b60"/>
+                                    <constraint firstAttribute="bottom" secondItem="2dz-w5-Kws" secondAttribute="bottom" constant="16" id="7g3-pM-xSh"/>
                                     <constraint firstAttribute="height" constant="65" id="fSl-tx-F1K"/>
+                                    <constraint firstAttribute="trailing" secondItem="2dz-w5-Kws" secondAttribute="trailing" constant="8" id="tvn-hp-ZL2"/>
                                 </constraints>
                             </view>
                         </subviews>
