--- a/HyuJokbo/HyuJokbo/JokboTabUploadStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/JokboTabUploadStoryboard.storyboard
@@ -73,6 +73,9 @@
                                         <rect key="frame" x="13" y="20" width="25" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="icon-photo-camera"/>
+                                        <connections>
+                                            <action selector="photoUploadButton:" destination="gza-My-EsT" eventType="touchUpInside" id="lXv-iA-077"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgV-Yz-jEd" customClass="DLRadioButton">
                                         <rect key="frame" x="236" y="15" width="76" height="34"/>
