--- a/HyuJokbo/HyuJokbo/JokboTabUploadStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/JokboTabUploadStoryboard.storyboard
@@ -70,7 +70,7 @@
                                 <rect key="frame" x="0.0" y="395" width="320" height="65"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFu-70-A9h">
-                                        <rect key="frame" x="13" y="20" width="25" height="25"/>
+                                        <rect key="frame" x="13" y="20" width="25" height="63"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="icon-photo-camera"/>
                                         <connections>
@@ -159,7 +159,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HaY-ul-CFj" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="btG-uN-I6c" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1851" y="-1634"/>
+            <point key="canvasLocation" x="1850.625" y="-1634.1549295774648"/>
         </scene>
     </scenes>
     <resources>
